# devpulse

./: .gitignore  DEVELOPER.md  README.md  manage.sh  pyproject.toml
devpulse/: config.py  config.yaml
devpulse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
devpulse/cli/: main.py
devpulse/core/: container.py  fetcher.py  logging_config.py  models.py  scorer.py  storage.py  topic_filter.py
devpulse/core/adapters/: rss.py
devpulse/core/nlp/: __init__.py  classifier.py  engine.py  ner.py
devpulse/core/nlp/corpus/: sample_curated.txt  sample_negative.txt  sample_positive.txt
devpulse/utils/: networking.py
