[project]
name = "devpulse"
version = "0.1.0"
description = "High-quality DevOps content aggregator"
authors = [
    { name = "DevPulse Team" }
]
dependencies = [
    "click>=8.1.7",
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "beautifulsoup4>=4.12.2",
    "pyyaml>=6.0.1",
    "tabulate>=0.9.0",
    "markdownify>=0.11.6",
]

[project.scripts]
devpulse = "devpulse.cli.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
